--- a/templates/thank_you.html
+++ b/templates/thank_you.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Thank You - Department Selection{% endblock %}
+{% block title %}Thank You - RFM Stellenbosch 2026{% endblock %}
 
 {% block content %}
 <div class="min-h-screen bg-gradient-to-br from-indigo-100 via-purple-50 to-pink-100 flex items-center justify-center p-4">
