--- a/templates/index.html
+++ b/templates/index.html
@@ -96,9 +96,9 @@
                     </span>
                 </div>
 
-                <p class="text-sm text-gray-500 mb-4" id="selectionInfo">
-                    Select up to <span id="maxDeptDisplay">3</span> department(s). For grouped categories, you can only choose one.
-                </p>
+                <div class="text-sm text-gray-500 mb-4" id="selectionInfo">
+                    <!-- Dynamic rules will be inserted here by JS -->
+                </div>
 
                 <!-- Departments will be rendered here -->
                 <div id="departmentsContainer" class="space-y-6"></div>
